// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/withErrorHandling should render a ErrorMask 1`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
/>
`;

exports[`components/withErrorHandling should render a ErrorMask with sub header 1`] = `
<ErrorMask
  errorHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
  errorSubHeader={
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  }
/>
`;

exports[`components/withErrorHandling should render an InlineError, along with the wrapped component 1`] = `
<React.Fragment>
  <InlineError
    title={
      <FormattedMessage
        defaultMessage="baz"
        description="bar"
        id="foo"
      />
    }
  >
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  </InlineError>
  <WrappedComponent />
</React.Fragment>
`;

exports[`components/withErrorHandling should render the wrapped component 1`] = `<WrappedComponent />`;
